--- a/number-guessing-game.html
+++ b/number-guessing-game.html
@@ -17,7 +17,7 @@
     <div class="container d-flex justify-content-center">
         <button id="start" type="button" class="btn"
             style="--bs-btn-padding-y: 1rem; --bs-btn-padding-x: 3.5rem; --bs-btn-font-size: 2rem;"
-            onclick="runGame(), enable()">START</button>
+            onclick="runGame(), enable(), disabled=true">START</button>
     </div>
     <div class="container d-flex justify-content-center">
         <button id="reset" type="button" class="btn"
